<resources>
    <string name="app_name">EzTryClothes_Company</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="type" translatable="false">Spinner</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="CompanyLogin">Company Login</string>
    <string name="EmailisRequired">Email is Required</string>
    <string name="Passwordmorethan8words">Password must be more than 8 words</string>
    <string name="Loggingin">"Logging in, Please wait..."</string>
    <string name="email">Email</string>
    <string name="customer_order">Customer Order</string>
    <string name="clothes">Clothes</string>
    <string name="help">Help</string>
    <string name="company_profile">Company Profile</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product Name :</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="gender">Gender :</string>
    <string name="male">MEN</string>
    <string name="female">WOMEN</string>
    <string name="clothestype">Type :</string>
    <string name="color">Color :</string>
    <string name="price">Price</string>
    <string name="pricetag" >Price :</string>
    <string name="discount">Discount(%)</string>
    <string name="size">Size :</string>
    <string name="material">Material :</string>
    <string name="description">Description :</string>
    <string name="release_date">Release Date :</string>
    <string name="tap_to_get_date">Tap to get Date</string>
    <string name="quantity">Quantity :</string>
    <string name="product_image">Product Image :</string>
    <string name="upload_product_image">Upload Product Image</string>
    <string name="product_image_for_try">Product Image for try :</string>
    <string name="upload_try_image_must_be_png">Upload Try Image(must be .PNG)</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="company_email">Company Email</string>
    <string name="company_name">Company Name</string>
    <string name="edit_product_info">Edit Product Info</string>
    <string name="product_price">Product Price: $</string>
    <string name="AddProduct">Add Product</string>
    <string name="YourClothesList"> Your Clothes List</string>
    <string name="EditProduct">Edit Product</string>
    <string name="CustomerPurchaseOrder">Customer Purchase Order</string>
    <string name="order_no">Order no:</string>
    <string name="customer_address">Customer Address :</string>
    <string name="customer_name">Customer Name :</string>
    <string name="Pleasewait">Loading, Please wait</string>
    <string-array name="type">
        <item>Hoodies</item>
        <item>Shirt</item>
        <item>T-Shirt</item>
        <item>Dress</item>
        <item>jeans</item>
        <item>shorts</item>
    </string-array>
    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
        <item name="colorAccent">@color/colorPrimary</item>
    </style>
</resources>
