<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationview">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customerorder"
            android:icon="@drawable/ic_order"
            android:title="@string/customer_order" />
        <item
            android:id="@+id/nav_clothes"
            android:icon="@drawable/ic_clothes"
            android:title="@string/clothes" />
    </group>
    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/company_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>